# libdmtx

./: CMakeLists.txt  build_release.sh  dmtxdecodescheme.c  dmtxscangrid.c
AppleBuild/: build-release.sh
AppleBuild/DMTX.xcframework/: Info.plist
AppleBuild/DMTX.xcframework/ios-arm64/dmtx.framework/: Info.plist
AppleBuild/DMTX.xcframework/ios-arm64_x86_64-simulator/dmtx.framework/: dmtx
AppleBuild/_builds/: CMakeCache.txt  cmake_install.cmake
AppleBuild/_builds/CMakeScripts/: ReRunCMake.make
AppleBuild/_builds/DMTX.build/Release-iphoneos/ZERO_CHECK.build/: Script-85C92A4CED6C280526453D72.sh
AppleBuild/_builds/DMTX.build/Release-iphoneos/dmtx.build/Objects-normal/arm64/: dmtx.LinkFileList
AppleBuild/_builds/DMTX.build/Release-iphonesimulator/dmtx.build/: module.modulemap
AppleBuild/_builds/DMTX.build/Release-iphonesimulator/dmtx.build/Objects-normal/arm64/: dmtx.LinkFileList
AppleBuild/_builds/DMTX.build/Release-iphonesimulator/dmtx.build/Objects-normal/arm64/Binary/: dmtx
AppleBuild/_builds/DMTX.build/Release-iphonesimulator/dmtx.build/Objects-normal/x86_64/: dmtx.LinkFileList  dmtx.d  dmtx.dia
AppleBuild/_builds/DMTX.build/Release-iphonesimulator/dmtx.build/Objects-normal/x86_64/Binary/: dmtx
AppleBuild/_builds/DMTX.xcodeproj/: project.pbxproj
AppleBuild/_builds/EagerLinkingTBDs/Release-iphoneos/dmtx.framework/: dmtx.tbd
AppleBuild/_builds/EagerLinkingTBDs/Release-iphonesimulator/dmtx.framework/: dmtx.tbd
AppleBuild/_builds/Release-iphoneos/dmtx.framework/: dmtx
AppleBuild/_builds/Release-iphonesimulator/dmtx.framework/: Info.plist
AppleBuild/_builds/Release-iphonesimulator/dmtx.framework/_CodeSignature/: CodeResources
